git commit -m "feat: implement appointment, prescription, medication & health metric modules
- Add Appointment CRUD with overlapping validation & state machine
- Implement Prescription & Medication with JPA cascade & business validation
- Add Health Metric tracking with clinical validation & partial updates
- Configure H2 in-memory DB & write 18 integration tests
- Fix Flyway/H2 compatibility & apply @Transactional best practices"