@@ -3,17 +3,18 @@ package com.patientmanagement.backend.service;
 import com.patientmanagement.backend.dto.PrescriptionCreateDto;
 import com.patientmanagement.backend.dto.PrescriptionItemDto;
 import com.patientmanagement.backend.dto.PrescriptionResponseDto;
+import com.patientmanagement.backend.entity.Medication;
 import com.patientmanagement.backend.entity.Prescription;
 import com.patientmanagement.backend.entity.PrescriptionItem;
 import com.patientmanagement.backend.exception.EntityNotFoundException;
 import com.patientmanagement.backend.repository.MedicationRepository;
 import com.patientmanagement.backend.repository.PatientRepository;
 import com.patientmanagement.backend.repository.PrescriptionRepository;
+import jakarta.validation.Valid;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class PrescriptionService {
@@ -32,6 +33,11 @@ public class PrescriptionService {
 
     @Transactional
     public PrescriptionResponseDto createPrescription(PrescriptionCreateDto dto) {
+
+        if (dto.getStartDate().isAfter(dto.getEndDate())) {
+            throw new IllegalArgumentException("Start date must be before or equal to end date");
+        }
+
         var patient = patientRepository.findById(dto.getPatientId())
                 .orElseThrow(() -> new EntityNotFoundException("Patient not found with id: " + dto.getPatientId()));
 
@@ -43,28 +49,46 @@ public class PrescriptionService {
                 .diagnosis(dto.getDiagnosis())
                 .build();
 
+
+        if (dto.getItems() == null || dto.getItems().isEmpty()) {
+            throw new IllegalArgumentException("Prescription must contain at least one medication item");
+        }
+
         List<PrescriptionItem> items = dto.getItems().stream().map(itemDto -> {
+
+            if (itemDto.getQuantity() == null || itemDto.getQuantity() <= 0) {
+                throw new IllegalArgumentException("Quantity must be greater than 0 for medication ID: " + itemDto.getMedicationId());
+            }
+
+            if (itemDto.getDosage() == null || itemDto.getDosage().trim().isEmpty()) {
+                throw new IllegalArgumentException("Dosage is required for medication ID: " + itemDto.getMedicationId());
+            }
+
             var medication = medicationRepository.findById(itemDto.getMedicationId())
                     .orElseThrow(() -> new EntityNotFoundException("Medication not found with id: " + itemDto.getMedicationId()));
+
             return PrescriptionItem.builder()
-                    .prescription(prescription)
                     .medication(medication)
                     .dosage(itemDto.getDosage())
                     .quantity(itemDto.getQuantity())
                     .build();
-        }).collect(Collectors.toList());
+        }).toList(); 
 
-        prescription.setItems(items);
+
+        items.forEach(prescription::addItem);
+
         return toResponseDto(prescriptionRepository.save(prescription));
     }
 
+    @Transactional(readOnly = true)
     public List<PrescriptionResponseDto> getByPatient(Long patientId) {
         return prescriptionRepository.findByPatientIdOrderByCreatedAtDesc(patientId)
                 .stream()
                 .map(this::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Transactional(readOnly = true)
     public PrescriptionResponseDto getDetail(Long id) {
         Prescription prescription = prescriptionRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Prescription not found with id: " + id));
@@ -79,7 +103,7 @@ public class PrescriptionService {
                         .dosage(item.getDosage())
                         .quantity(item.getQuantity())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         return PrescriptionResponseDto.builder()
                 .id(prescription.getId())
@@ -93,4 +117,64 @@ public class PrescriptionService {
                 .items(items)
                 .build();
     }
+
+
+    @Transactional
+    public PrescriptionResponseDto updatePrescription(Long id, PrescriptionCreateDto dto) {
+
+        Prescription prescription = prescriptionRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Prescription not found with id: " + id));
+
+
+        if (dto.getStartDate().isAfter(dto.getEndDate())) {
+            throw new IllegalArgumentException("Start date must be before or equal to end date");
+        }
+
+
+        if (dto.getItems() == null || dto.getItems().isEmpty()) {
+            throw new IllegalArgumentException("Prescription must contain at least one medication item");
+        }
+
+        // 4. Build danh sách item mới
+        List<PrescriptionItem> newItems = dto.getItems().stream().map(itemDto -> {
+            if (itemDto.getQuantity() == null || itemDto.getQuantity() <= 0) {
+                throw new IllegalArgumentException("Quantity must be greater than 0");
+            }
+            if (itemDto.getDosage() == null || itemDto.getDosage().trim().isEmpty()) {
+                throw new IllegalArgumentException("Dosage is required");
+            }
+
+            Medication medication = medicationRepository.findById(itemDto.getMedicationId())
+                    .orElseThrow(() -> new EntityNotFoundException("Medication not found"));
+
+            return PrescriptionItem.builder()
+                    .medication(medication)
+                    .dosage(itemDto.getDosage())
+                    .quantity(itemDto.getQuantity())
+                    .build();
+        }).toList();
+
+
+        prescription.setStartDate(dto.getStartDate());
+        prescription.setEndDate(dto.getEndDate());
+        prescription.setDiagnosis(dto.getDiagnosis());
+
+        // 6. Xử lý items: Xóa cũ -> Thêm mới (kích hoạt orphanRemoval)
+        prescription.getItems().clear();
+        for (PrescriptionItem item : newItems) {
+            prescription.addItem(item); // Dùng helper method để set bidirectional
+        }
+
+        return toResponseDto(prescriptionRepository.save(prescription));
+    }
+
+    @Transactional
+    public void deletePrescription(Long id) {
+        Prescription prescription = prescriptionRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Prescription not found with id: " + id));
+
+
+        prescriptionRepository.delete(prescription);
+    }
+
 }
